--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ Pygments==2.13.0
 Pympler==1.0.1
 pyparsing==3.0.9
 PyPDF2==2.11.1
+pypiwin32==223
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.2.1
