--- a/requirements.txt
+++ b/requirements.txt
@@ -22,15 +22,15 @@ cytoolz==0.12.0
 DateTime==4.7
 decorator==5.1.1
 entrypoints==0.4
-eth-abi==3.0.1
-eth-account==0.7.0
-eth-hash==0.3.3
-eth-keyfile==0.6.0
-eth-keys==0.4.0
-eth-rlp==0.3.0
-eth-tester==0.7.0b1
-eth-typing==3.2.0
-eth-utils==2.0.0
+#eth-abi==3.0.1
+#eth-account==0.7.0
+#eth-hash==0.3.3
+#eth-keyfile==0.6.0
+#eth-keys==0.4.0
+#eth-rlp==0.3.0
+#eth-tester==0.7.0b1
+#eth-typing==3.2.0
+#eth-utils==2.0.0
 face-recognition-models==0.3.0
 fer==22.4.0
 flatbuffers==1.12
