--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 requests-oauthlib==1.3.1
 rich==12.5.1
-rlp==3.0.0
+#rlp==3.0.0
 rsa==4.9
 scikit-learn==1.1.2
 scipy==1.9.1
@@ -125,7 +125,7 @@ validators==0.20.0
 varint==1.0.2
 Wand==0.6.10
 watchdog==2.1.9
-web3==5.30.0
+#web3==5.30.0
 websockets==9.1
 Werkzeug==2.2.2
 wrapt==1.14.1
